# mopidyapi

./: .gitignore  Makefile  Pipfile  README.md  README.rst  pyproject.toml
codegen/: .bkk.codegen.py  codegen.py  controller.tpl
codegen/code/: history.py  library.py
mopidy_api/: __init__.py  client.py  connection.py  playlist.py  search.py  wsclient.py
mopidy_api/controllers/: library.py  mixer.py  playback.py  playlists.py  tracklist.py
mopidyapi/: __init__.py  client.py  exceptions.py  httpclient.py  mopidy_types.py  parsedata.py  wsclient.py
mopidyapi/controllers/: history.py  library.py  mixer.py  playback.py  playlists.py  tracklist.py
tests/: test_parsedata.py
