[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "mopidyapi"
author = "Asbjørn Olling"
author-email = "asbjornolling@gmail.com"
home-page = "https://github.com/AsbjornOlling/mopidyapi"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
requires=["requests", "websockets"]
requires-python=">=3.6"
