[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "mopidyapi"
author = "Asbjørn Olling"
author-email = "asbjornolling@gmail.com"
home-page = "https://github.com/AsbjornOlling/mopidyapi"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
		"Development Status :: 4 - Beta",
		"Intended Audience :: Developers",
		"Programming Language :: Python :: 3 :: Only",
		"Programming Language :: Python :: 3.6",
		"Topic :: Multimedia :: Sound/Audio :: Players",
		"Topic :: Software Development :: Libraries"
]
requires=["requests", "websockets"]
requires-python=">=3.6"
description-file="README.md"
